resolving contrast issues with the code syntax

--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,64 +1,71 @@
-/* This css file is the colorful.css theme from https://github.com/iwootten/jekyll-syntax */
+/* This css file is the colorful.css theme from https://maxchadwick.xyz/pygments-high-contrast-stylesheets/ */
 
-.highlight .hll { background-color: #ffffcc }
-.highlight  { background: #ffffff; }
-.highlight .c { color: #888888 } /* Comment */
-.highlight .err { color: #FF0000; background-color: #FFAAAA } /* Error */
-.highlight .k { color: #008800; font-weight: bold } /* Keyword */
-.highlight .o { color: #333333 } /* Operator */
-.highlight .cm { color: #888888 } /* Comment.Multiline */
-.highlight .cp { color: #557799 } /* Comment.Preproc */
-.highlight .c1 { color: #888888 } /* Comment.Single */
-.highlight .cs { color: #cc0000; font-weight: bold } /* Comment.Special */
-.highlight .gd { color: #A00000 } /* Generic.Deleted */
-.highlight .ge { font-style: italic } /* Generic.Emph */
-.highlight .gr { color: #FF0000 } /* Generic.Error */
-.highlight .gh { color: #000080; font-weight: bold } /* Generic.Heading */
-.highlight .gi { color: #00A000 } /* Generic.Inserted */
-.highlight .go { color: #888888 } /* Generic.Output */
-.highlight .gp { color: #c65d09; font-weight: bold } /* Generic.Prompt */
-.highlight .gs { font-weight: bold } /* Generic.Strong */
-.highlight .gu { color: #800080; font-weight: bold } /* Generic.Subheading */
-.highlight .gt { color: #0044DD } /* Generic.Traceback */
-.highlight .kc { color: #008800; font-weight: bold } /* Keyword.Constant */
-.highlight .kd { color: #008800; font-weight: bold } /* Keyword.Declaration */
-.highlight .kn { color: #008800; font-weight: bold } /* Keyword.Namespace */
-.highlight .kp { color: #003388; font-weight: bold } /* Keyword.Pseudo */
-.highlight .kr { color: #008800; font-weight: bold } /* Keyword.Reserved */
-.highlight .kt { color: #333399; font-weight: bold } /* Keyword.Type */
-.highlight .m { color: #6600EE; font-weight: bold } /* Literal.Number */
-.highlight .s { background-color: #fff0f0 } /* Literal.String */
-.highlight .na { color: #0000CC } /* Name.Attribute */
-.highlight .nb { color: #007020 } /* Name.Builtin */
-.highlight .nc { color: #BB0066; font-weight: bold } /* Name.Class */
-.highlight .no { color: #003366; font-weight: bold } /* Name.Constant */
-.highlight .nd { color: #555555; font-weight: bold } /* Name.Decorator */
-.highlight .ni { color: #880000; font-weight: bold } /* Name.Entity */
-.highlight .ne { color: #FF0000; font-weight: bold } /* Name.Exception */
-.highlight .nf { color: #0066BB; font-weight: bold } /* Name.Function */
-.highlight .nl { color: #997700; font-weight: bold } /* Name.Label */
-.highlight .nn { color: #0e84b5; font-weight: bold } /* Name.Namespace */
-.highlight .nt { color: #007700 } /* Name.Tag */
-.highlight .nv { color: #996633 } /* Name.Variable */
-.highlight .ow { color: #000000; font-weight: bold } /* Operator.Word */
-.highlight .w { color: #bbbbbb } /* Text.Whitespace */
-.highlight .mf { color: #6600EE; font-weight: bold } /* Literal.Number.Float */
-.highlight .mh { color: #005588; font-weight: bold } /* Literal.Number.Hex */
-.highlight .mi { color: #0000DD; font-weight: bold } /* Literal.Number.Integer */
-.highlight .mo { color: #4400EE; font-weight: bold } /* Literal.Number.Oct */
-.highlight .sb { background-color: #fff0f0 } /* Literal.String.Backtick */
-.highlight .sc { color: #0044DD } /* Literal.String.Char */
-.highlight .sd { color: #DD4422 } /* Literal.String.Doc */
-.highlight .s2 { background-color: #fff0f0 } /* Literal.String.Double */
-.highlight .se { color: #666666; font-weight: bold; background-color: #fff0f0 } /* Literal.String.Escape */
-.highlight .sh { background-color: #fff0f0 } /* Literal.String.Heredoc */
-.highlight .si { background-color: #eeeeee } /* Literal.String.Interpol */
-.highlight .sx { color: #DD2200; background-color: #fff0f0 } /* Literal.String.Other */
-.highlight .sr { color: #000000; background-color: #fff0ff } /* Literal.String.Regex */
-.highlight .s1 { background-color: #fff0f0 } /* Literal.String.Single */
-.highlight .ss { color: #AA6600 } /* Literal.String.Symbol */
-.highlight .bp { color: #007020 } /* Name.Builtin.Pseudo */
-.highlight .vc { color: #336699 } /* Name.Variable.Class */
-.highlight .vg { color: #dd7700; font-weight: bold } /* Name.Variable.Global */
-.highlight .vi { color: #3333BB } /* Name.Variable.Instance */
-.highlight .il { color: #0000DD; font-weight: bold } /* Literal.Number.Integer.Long */
+.highlight .hll { background-color: #ffffcc; }
+.highlight { background: #ffffff; }
+.highlight .c { color: #767676; }
+.highlight .err { background-color: #FFAAAA; color: #a00000; }
+.highlight .k { color: #008800; font-weight: bold; }
+.highlight .o { color: #333333; }
+.highlight .ch { color: #767676; }
+.highlight .cm { color: #767676; }
+.highlight .cp { color: #557799; }
+.highlight .cpf { color: #767676; }
+.highlight .c1 { color: #767676; }
+.highlight .cs { color: #cc0000; font-weight: bold; }
+.highlight .gd { color: #A00000; }
+.highlight .ge { font-style: italic; }
+.highlight .gr { color: #eb0000; }
+.highlight .gh { color: #000080; font-weight: bold; }
+.highlight .gi { color: #008700; }
+.highlight .go { color: #767676; }
+.highlight .gp { font-weight: bold; color: #bc5909; }
+.highlight .gs { font-weight: bold; }
+.highlight .gu { color: #800080; font-weight: bold; }
+.highlight .gt { color: #0044DD; }
+.highlight .kc { color: #008800; font-weight: bold; }
+.highlight .kd { color: #008800; font-weight: bold; }
+.highlight .kn { color: #008800; font-weight: bold; }
+.highlight .kp { color: #003388; font-weight: bold; }
+.highlight .kr { color: #008800; font-weight: bold; }
+.highlight .kt { color: #333399; font-weight: bold; }
+.highlight .m { color: #6600EE; font-weight: bold; }
+.highlight .s { background-color: #fff0f0; }
+.highlight .na { color: #0000CC; }
+.highlight .nb { color: #007020; }
+.highlight .nc { color: #BB0066; font-weight: bold; }
+.highlight .no { color: #003366; font-weight: bold; }
+.highlight .nd { color: #555555; font-weight: bold; }
+.highlight .ni { color: #880000; font-weight: bold; }
+.highlight .ne { font-weight: bold; color: #eb0000; }
+.highlight .nf { color: #0066BB; font-weight: bold; }
+.highlight .nl { font-weight: bold; color: #8f6f00; }
+.highlight .nn { font-weight: bold; color: #0e7eab; }
+.highlight .nt { color: #007700; }
+.highlight .nv { color: #996633; }
+.highlight .ow { color: #000000; font-weight: bold; }
+.highlight .w { color: #767676; }
+.highlight .mb { color: #6600EE; font-weight: bold; }
+.highlight .mf { color: #6600EE; font-weight: bold; }
+.highlight .mh { color: #005588; font-weight: bold; }
+.highlight .mi { color: #0000DD; font-weight: bold; }
+.highlight .mo { color: #4400EE; font-weight: bold; }
+.highlight .sa { background-color: #fff0f0; }
+.highlight .sb { background-color: #fff0f0; }
+.highlight .sc { color: #0044DD; }
+.highlight .dl { background-color: #fff0f0; }
+.highlight .sd { color: #d54220; }
+.highlight .s2 { background-color: #fff0f0; }
+.highlight .se { color: #666666; font-weight: bold; background-color: #fff0f0; }
+.highlight .sh { background-color: #fff0f0; }
+.highlight .si { background-color: #eeeeee; }
+.highlight .sx { background-color: #fff0f0; color: #d82100; }
+.highlight .sr { color: #000000; background-color: #fff0ff; }
+.highlight .s1 { background-color: #fff0f0; }
+.highlight .ss { color: #AA6600; }
+.highlight .bp { color: #007020; }
+.highlight .fm { color: #0066BB; font-weight: bold; }
+.highlight .vc { color: #336699; }
+.highlight .vg { font-weight: bold; color: #b55f00; }
+.highlight .vi { color: #3333BB; }
+.highlight .vm { color: #996633; }
+.highlight .il { color: #0000DD; font-weight: bold; }
